Conclui estilização do site

--- a/next.html
+++ b/next.html
@@ -11,11 +11,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>NextGen</title>
+</head>
 
 <body>
 
     <header>
-      <h1><div class="logo"> NextGen </div></h1>
+        <h1>
+            <div class="logo"> NextGen </div>
+        </h1>
         <nav>
             <ul>
                 <li>Home</li>
@@ -26,7 +29,7 @@
     </header>
 
     <main class="container">
-        <div class="teck-circle">
+        <div class="tech-circle">
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
@@ -35,55 +38,49 @@
 
         <div class="list">
             <div class="item active">
+
                 <div class="product-img">
                     <img src="./img/apple-watch.png" alt="apple apple-watch">
                 </div>
+
                 <div class="content">
                     <p class="product-tag">Novo lançamento</p>
-                    <p class="product-mane">Apple Watch Series 10</p>
-                    <p class="description">O Smart watch mais avançado do mercado</p>
+                    <p class="product-name">Apple Watch Series 10</p>
+                    <p class="description">Apple Watch Series 10: tecnologia avançada em cada detalhe.
+                        Design moderno aliado a recursos inteligentes para saúde e produtividade.
+                        O smartwatch que redefine praticidade e estilo no seu dia a dia.
+                    </p>
 
                     <button class="btn">saiba mais</button>
-
                 </div>
             </div>
-
-
             <div class="item">
                 <div class="product-img">
                     <img src="./img/air-pods.png" alt="apple air-pods">
                 </div>
+
                 <div class="content">
                     <p class="product-tag">Novo lançamento</p>
-                    <p class="product-mane">Apple Air Pods</p>
+                    <p class="product-name">Apple Air Pods</p>
                     <p class="description">O fone ant ruído mais top do mercado</p>
 
                     <button class="btn">saiba mais</button>
-
                 </div>
             </div>
-
 
             <div class="item">
                 <div class="product-img">
                     <img src="./img/vision-pro.png" alt="vision-pro">
                 </div>
+
                 <div class="content">
                     <p class="product-tag">Novo lançamento</p>
-                    <p class="product-mane">Vision Pro</p>
+                    <p class="product-name">Vision Pro</p>
                     <p class="description">O óculos de realidade virtual mais top do mercado</p>
-
                     <button class="btn">saiba mais</button>
-
                 </div>
+
             </div>
-
-
-
-
-
-
-
 
         </div>
 
@@ -106,16 +103,16 @@
 
         </div>
 
-        <div class="indicators"></div>
+        <div class="indicators">
 
-        <div class="numbers">01</div>
-        <div class="dots">
-            <div class="dot active"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+            <div class="numbers">01</div>
+            <div class="dots">
+                <div class="dot active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+
         </div>
-
-
 
     </main>
 
